--- a/omod/pom.xml
+++ b/omod/pom.xml
@@ -76,11 +76,8 @@
 		<dependency>
 			<groupId>org.openmrs.module</groupId>
 			<artifactId>webservices.rest-omod</artifactId>
-		</dependency>
-
-		<dependency>
-			<groupId>org.openmrs.module</groupId>
-			<artifactId>idgen-api</artifactId>
+			<version>2.21.0</version>
+			<scope>provided</scope>
 		</dependency>
 
 
